--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>SnakeMania &mdash; Lets play!</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@100;200&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@100;200&family=Short+Stack&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -16,9 +16,9 @@
   </header>
   <main>
     <section class="section">
-      <div id="board">
-         
-      </div>
+      <div id="scoreBoard">Score: 0</div>
+      <div id="highScore">Max Score: 0</div>
+      <div id="board"></div>
     </section>
   </main>
   <script src="js/app.js"></script>
