--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SnakeMania &mdash; Lets play!</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@100;200&family=Short+Stack&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <header class="header">
-    <a href="#" class="logo">SnakeMania</a>
-  </header>
-  <main>
-    <section class="section">
-      <div id="scoreBoard">Score: 0</div>
-      <div id="highScore">Max Score: 0</div>
-      <div id="board"></div>
-    </section>
-  </main>
-  <script src="js/app.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SnakeMania &mdash; Lets play!</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@100;200&family=Short+Stack&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <a href="#" class="logo">SnakeMania</a>
+    </header>
+    <main>
+      <section class="section">
+        <div id="scoreBoard">Score: 0</div>
+        <div id="maxScore">Max Score: 0</div>
+        <div id="board"></div>
+        <div id="instructions">
+          <h3>Game Instructions</h3>
+        </div>
+      </section>
+    </main>
+    <script src="js/app.js"></script>
+  </body>
 </html>
